"added main css"

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="main.css" />
     <title>Coursera Site</title>
-</head>
-<body>
-<h1>Test Site</h1>
-<h2>list</h2>
+  </head>
+  <body>
+    <h1>Test Site</h1>
+    <h2>list</h2>
 
-<p>Tell a story here. </p>
-</body>
+    <p>Tell a story here.</p>
+  </body>
 </html>
