--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="main.css" />
+    <link rel="stylesheet" type="text/css" href="styles.css" />
     <title>Coursera Site</title>
   </head>
   <body>
     <h1>Test Site</h1>
     <h2>list</h2>
-
+    <li>one</li>
+    <li>two</li>
+    <li>three</li>
     <p>Tell a story here.</p>
   </body>
+  <footer>
+    <break>________________</break>
+    <h5>footnote</h5>
+  </footer>
 </html>
