"playing around. added js file"

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
   <body>
     <h1>Test Site</h1>
     <h2>list</h2>
-    <li>one</li>
-    <li>two</li>
-    <li>three</li>
-    <p>Tell a story here.</p>
+    <li id="li1">one</li>
+    <li id="li2">two</li>
+    <li id="li3">three</li>
+    <p id="p1">Tell a story here.</p>
+    <p id="p2">second para</p>
+    <footer>
+      <hr />
+      <h5>footnote</h5>
+    </footer>
   </body>
-  <footer>
-    <break>________________</break>
-    <h5>footnote</h5>
-  </footer>
 </html>
