"playing with index.html"

--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
   <body>
     <h1>Test Site</h1>
     <h2>list</h2>
-    <li id="li1">one</li>
-    <li id="li2">two</li>
-    <li id="li3">three</li>
+    <ul>
+      <li id="li1">one</li>
+      <li id="li2">two</li>
+      <li id="li3">three</li>
+    </ul>
     <p id="p1">Tell a story here.</p>
     <p id="p2">second para</p>
+    <div>Div here</div>
+    <span>Span here</span>
     <footer>
       <hr />
       <h5>footnote</h5>
